--- a/exam/style.css
+++ b/exam/style.css
@@ -200,23 +200,37 @@
 
 .place {
   background: #333333;
-  height: 337px;
 }
 .place .container {
   width: 998px;
+}
+@media screen and (max-width: 1015px) {
+  .place .container {
+    width: auto;
+  }
 }
 .place__inner {
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: relative;
-  padding-top: 20px;
+  padding: 20px 0 120px;
+}
+@media screen and (max-width: 1015px) {
+  .place__inner {
+    flex-direction: column;
+  }
 }
 .place__line {
   position: absolute;
   top: 40px;
   left: 103px;
   z-index: 1;
+}
+@media screen and (max-width: 1015px) {
+  .place__line {
+    display: none;
+  }
 }
 .place__icon {
   padding: 20px;
@@ -250,7 +264,8 @@
 }
 .design1__inner,
 .design2__inner {
-  width: 540px;
+  max-width: 540px;
+  width: 100%;
   height: 371px;
   display: flex;
   flex-direction: column;
@@ -285,7 +300,6 @@
 .say {
   background-image: url(image/section5-bg.jpg);
   background-size: cover;
-  height: 731px;
   padding: 120px 0 200px;
 }
 .say__title {
@@ -298,6 +312,12 @@
 .say__content {
   display: flex;
 }
+@media screen and (max-width: 768px) {
+  .say__content {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .say__content--descr {
   display: flex;
   flex-direction: column;
@@ -308,6 +328,11 @@
 }
 .say__content--name {
   font-size: 20px;
+}
+@media screen and (max-width: 768px) {
+  .say__content--name {
+    padding-bottom: 30px;
+  }
 }
 .say__content--text {
   font-size: 16px;
