--- a/exam/style.scss
+++ b/exam/style.scss
@@ -16,6 +16,8 @@
 
 .header {
   background-image: url("image/header-bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -160,15 +162,16 @@
     align-items: center;
     justify-content: space-between;
     padding-bottom: 132px;
-    @media screen and (max-width: 425px) {
+    @media screen and (max-width: 700px) {
       flex-direction: column;
+      padding-bottom: 50px;
     }
   }
 
   &__content {
     max-width: 541px;
     width: 100%;
-    @media screen and (max-width: 535px) {
+    @media screen and (max-width: 700px) {
       text-align: center;
     }
     &--title {
@@ -177,6 +180,9 @@
       font-weight: 400;
       text-transform: capitalize;
       padding: 200px 0 60px;
+      @media screen and (max-width: 700px) {
+        padding: 50px 0 50px;
+      }
     }
 
     &--text {
@@ -198,7 +204,9 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
-
+    @media screen and (max-width: 700px) {
+      padding-top: 65px;
+    }
     img:first-child {
       margin-right: 125px;
       @media screen and (max-width: 768px) {
@@ -227,6 +235,7 @@
     padding: 20px 0 120px;
     @media screen and (max-width: 1015px) {
       flex-direction: column;
+      padding: 0 0 50px;
     }
   }
 
@@ -256,6 +265,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media screen and (max-width: 1015px) {
+      margin-top: 30px;
+    }
   }
 
   &__text {
@@ -317,6 +329,9 @@
   background-image: url(image/section5-bg.jpg);
   background-size: cover;
   padding: 120px 0 200px;
+  @media screen and (max-width: 535px) {
+    padding: 50px 0 50px;
+  }
 
   &__title {
     font-family: 'Aleo', serif;
@@ -324,6 +339,9 @@
     font-weight: 400;
     text-align: center;
     padding-bottom: 94px;
+    @media screen and (max-width: 535px) {
+      padding-bottom: 50px;
+    }
   }
 
   &__content {
@@ -331,6 +349,11 @@
     @media screen and (max-width: 768px) {
       flex-direction: column;
       align-items: center;
+    }
+    &--img img {
+      @media screen and (max-width: 535px) {
+        width: 100%;
+      }
     }
 
     &--descr {
@@ -363,8 +386,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 268px;
+    padding: 120px 0 50px;
     font-family: 'Josefin Sans', sans-serif;
+    @media screen and (max-width: 535px) {
+      padding: 50px 0 50px;
+    }
   }
 
   &__logo {
